<resources>
    <string name="app_name">Simple To-Do List</string>
    <!--  Strings  for menu -->
    <string name="menu_search">Search</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_sort_name">Sort by name</string>
    <string name="menu_sort_date">Sort by date created</string>
    <string name="menu_delete_all">Delete all completed</string>
    <!--  Strings  for Add/Edit Fragment -->
    <string name="add_edit_text">Task name</string>
    <string name="date">Created:</string>
    <string name="confirm">Confirm deletion</string>
    <string name="confirm_msg">Do you really want to delete all completed tasks?</string>
    <string name="confirm_cancel">Cancel</string>
    <string name="confirm_yes">Yes</string>
    <string name="reminder_btn_error">Please input the tasks name</string>
    <string name="reminder">Reminder</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_success">The reminder has been canceled</string>
    <string name="created">Created: </string>
    <string name="on_txt_change_empty">Please input the tasks name!</string>
    <string name="reminder_for">Reminder for: </string>
    <string name="invalid_time">Invalid time!</string>
    <string name="disabled_btn_warning">Reminder cannot be created for completed tasks</string>
    <string name="timePicker_text">Set the time:</string>
    <!--  Strings  for Task view -->
    <string name="task_delete">Task deleted</string>
    <string name="task_undo">Undo</string>
    <string name="add_widget" translatable="false">Add widget</string>
    <string name="task_list_title">Tasks</string>
    <string name="task_edit_title">Edit Task</string>
    <string name="task_new_title">New Task</string>




</resources>