<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/denim"
    tools:context=".ui.addedittask.AddEditTaskFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/borders"
        android:orientation="vertical"
        android:padding="8dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/bamboo"
            android:outlineAmbientShadowColor="@color/denim"
            app:cardCornerRadius="0dp"
            app:cardElevation="7dp">

            <EditText
                android:id="@+id/edit_text_task_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_edit_text"
                android:inputType="text"
                android:textColor="@color/denim" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="@drawable/borders"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/reminder_btn"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/bamboo"
                    android:padding="10dp"
                    android:text="@string/reminder"
                    android:textColor="@color/denim" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:background="@drawable/borders"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/btn_cancel"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/bamboo"
                    android:padding="10dp"
                    android:text="@string/cancel"
                    android:textColor="@color/denim" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/text_view_date_created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:textColor="@color/denim"
            tools:text="Date created:" />

        <TextView
            android:id="@+id/help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:textColor="@color/denim"
            tools:text="Reminder: " />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_save_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:backgroundTint="@color/bamboo"
        android:src="@drawable/done_icon"
        tools:ignore="ContentDescription"
        android:layout_above="@+id/adView2"/>


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-8303754714792316/5649614675" />

</RelativeLayout>